--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -16,6 +16,7 @@ body
 html,body {
   width: 100%;
   overflow-x: hidden;
+  /*overflow-y:hidden;*/
 }
 
 html {
@@ -147,12 +148,14 @@ footer {
 }
 #map { 
 	position:absolute; 
-	top:70px; 
-	bottom:80px; 
-	left: 250px;
+	top: 270px; 
+	bottom: 0px; 
+	left: 500px;
 	width: 500px; 
+	height: 500px
 }
 /*TEST*/
+/*
 .btn2 {
 	top: 900px;
     background: transparent;
@@ -172,6 +175,37 @@ footer {
   color: #000000;
   border-color: transparent;
 }
+.marker {
+    display: block;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 0;
+}
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+*/
 /*TEST*/
 
 .sk-circle {
