--- a/WebService/templates/mapFood.html
+++ b/WebService/templates/mapFood.html
@@ -4,10 +4,10 @@
 	<meta charset= "UTF-8" />
 	<title>Australian Map of Foods</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-	<script type ="text/javascript" src="/js/Couch.js"></script>
+	<script type ="text/javascript" src="static/js/Couch.js"></script>
 	<script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
 	<link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
-	<script src="../Leaflet.markercluster-0.2/dist/leaflet.markercluster.js" type="text/javascript"></script>
+	<script src="static/Leaflet.markercluster-0.2/dist/leaflet.markercluster.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="https://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.css" />
 	<link rel="stylesheet" href="https://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
 	<script src="https://leaflet.github.io/Leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
