--- a/WebService/templates/mapHomelessAndFoods.html
+++ b/WebService/templates/mapHomelessAndFoods.html
@@ -5,16 +5,16 @@
 	<title>Homeless Map by States in Australia</title>
 
 	<meta charset="utf-8" />
-	<script type ="text/javascript" src="../js/Couch.js"></script>
+	<script type ="text/javascript" src="static/js/Couch.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico" />
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 
-	<script src="../Leaflet.markercluster-0.2/dist/leaflet.markercluster.js" type="text/javascript"></script>
+	<script src="static/Leaflet.markercluster-0.2/dist/leaflet.markercluster.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="https://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.css" />
 	<link rel="stylesheet" href="https://leaflet.github.io/Leaflet.markercluster/dist/MarkerCluster.Default.css" />
 	<script src="https://leaflet.github.io/Leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
@@ -40,7 +40,7 @@
 
 <div id='map'></div>
 
-<script type="text/javascript" src="../geojson/aus_lga2_merge.json"></script>
+<script type="text/javascript" src="static/geojson/aus_lga2_merge.json"></script>
 
 <script type="text/javascript">
 
